cmake_minimum_required(VERSION 3.9)
project(ex4)

set(CMAKE_CXX_STANDARD 11)

add_library(ex4
        #Pixel.cpp
        #Pixel.h
        #SuperPixel.cpp
        #SuperPixel.h
        map_tree.h
        node_list.h
        UnionFindPixel.cpp
        UnionFindPixel.h Image.cpp Image.h
        Image.cpp
        Image.h
        main.cpp)